# DSA

./: .gitignore  README.md  pyproject.toml  reqs.txt
binary_search/: binary_search_iteratively.py  binary_search_recursive.py
selection_sort/: selection_sort.py
sorting/: bubble.py
tests/bin_search/: binary_search_test.py
trees/: tree.py
